styles/contactsPage.css
/* ... */
.dropdown-menu-profile-avatar a {
  background-color: #2a3647;
  color: #ffffff;
  text-decoration: none;
  padding: 10px;
  border-radius: 5px;
}
.dropdown-menu-profile-avatar a:hover {
  background-color: #091931;
  padding: 10px;
}
.profile-avatar {
  width: 56px;
  height: 56px;
  background-color: #ffffff;
  border: 3px solid#090909;
  font-size: 24px;
  font-weight: bold;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.profile-avatar :hover {
  background-color: #e1e6ec;
  border-radius: 50%;
  border: 11px solid#E1E6EC;
}
.profile-avatar a {
  text-decoration: none;
  color: #29abe2;
}
.profile-avatar a:hover {
  text-decoration: none;
}

.avatar-in-edit {
  margin-right: 0;
  width: 134px;
  height: 134px;
}

.sidebar {
  display: flex;
  flex-direction: column;
  position: fixed;
  background-color: #2a3647;
  height: auto;
  min-height: 100vh;
  width: 232px;
  color: white;
  top: 0;
  bottom: 0;
  z-index: 1000;
}
.sidebar a {
  color: white;
  text-decoration: none;
  font-size: 16px;
}
.logo-container {
  width: 100px;
  height: 121px;
  margin-top: 64px;
  margin-bottom: 114px;
  margin-left: 56px;
}
.menu-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-content: space-between;
  padding-bottom: 64px;
  flex: 1;
}

.menu-items {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}
.menu-item {
  display: flex;
  cursor: pointer;
  padding-left: 10px;
  padding-bottom: 10px;
  padding-top: 10px;
  padding-left: 10px;
  color: #cdcdcd;
  font-size: 16px;
  width: calc(100%-56px);
  align-items: center;
  padding-left: 56px;
  margin-bottom: 15px;
}
.menu-item:hover {
  background-color: #091931;
}
.menu-item a {
  display: flex;
  align-items: center;
  text-decoration: none;
  width: 100%;
}
.menu-item img {
  margin-right: 8px;
  height: 30px;
  width: 30px;
}
.footer-container {
  display: flex;
  flex-direction: column;
  color: #cdcdcd;
  font-size: 16px;
  padding-left: 56px;
}
.footer-container a {
  margin-bottom: 10px;
  font-size: 16px;
  color: #a8a8a8;
}
.footer-container a:hover {
  cursor: pointer;
  font-size: 18px;
  color: #29abe2;
  background-color: #2a3647;
}

.container-main {
  display: flex;
  justify-content: start;
  /* padding-top: 98px; */
  padding-left: 230px;
  width: 100%;
  height: calc(100vh - 96px);
}

/* .contact-area {
  display: flex;
  justify-content: center;
  width: 456px;
  height: 100%;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
  overflow-y: auto;
  overflow-y: scroll;
  z-index: 2;
} */

.add-contact-btn-section {
  position: fixed;
  display: flex;
  justify-content: center;
  width: 400px;
  height: 100px;
  background-color: rgb(209, 33, 33);
  z-index: 1;
}

.add-contact-btn {
  background-color: #2a3647;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  gap: 16px;
  border: 0px;
  border-radius: 10px;
  width: 80%;
  height: 56px;
  margin-top: 22.5px;
  margin-left: 52px;
  font-size: 21px;
  font-weight: 700;
}

.add-contact-btn {
  padding-bottom: 20px;
  padding-top: 40px;
}

.contact-details-area {
  position: relative;
  width: 456px;
  height: 100%;
  display: flex;
  justify-content: center;
  background-color: white;
  box-shadow: 4px -1px 4px rgba(0, 0, 0, 0.1);
  z-index: 1;
}

.list-container {
  overflow-y: scroll;
  /* height: calc(100vh - 96px); */
}

.button-container {
  position: fixed;
  width: 400px;
  z-index: 2;
  background-color: white;
  display: flex;
  justify-content: center;
}

.new-contact-button {
  width: 80%;
  height: 56px;
  margin-top: 22.5px;
  margin-bottom: 8px;
  position: sticky;
  top: 22.5px;
  z-index: 1;
}

.new-contact-button img {
  width: 32px;
  height: 32px;
}

.contact-list {
  width: 400px;
  /* height: 100%; */
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 80px;
  /* max-height: calc(100vh - 96px); */
}

.letter-heading {
  width: 80%;
  height: 58px;
  /* padding: 32px 24px 32px 24px; */
  display: flex;
  align-items: center;
}

.letter-heading span {
  margin-left: 40px;
  font-size: 20px;
  font-weight: 400;
}

.contact-separator {
  height: 1px;
  width: 80%;
  background-color: #d1d1d1;
  margin-top: 4px;
  margin-bottom: 4px;
  padding: 1px 0 0 0;
  margin-left: 20px;
}

.single-contact {
  width: 80%;
  height: 78px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 35px;
  border-radius: 10px;
  padding: 15px 0px 15px 0px;
}

.contact-hover-effect:hover {
  cursor: pointer;
  background-color: #d8d7d7;
}

.contact-hover-effect.active {
  background-color: #2a3647;
  border-radius: 8px;
  color: white;
}

.avatar-placeholder {
  background-color: orange;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 3px solid white;
  border-radius: 100%;
  width: 42px;
  height: 42px;
  margin-left: 24px;
}

.avatar-overlay {
  font-size: 12px;
  font-weight: 400;
  color: white;
}

.avatar-overlay-display {
  font-size: 47px;
  font-weight: 500;
  color: white;
}

.contact-details {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.ellipsis-text {
  max-width: 200px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.contact-details span {
  font-size: 20px;
  font-weight: 400;
}

.contact-details a {
  color: rgba(41, 171, 226, 1);
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
}

.contact-display {
  position: relative;
  width: 100%;
  height: calc(100vh - 96px);
  background-color: rgba(246, 247, 248, 1);
  display: flex;
  flex-direction: column;
}

.contact-heading {
  margin-top: 110px;
  margin-left: 55px;
  display: flex;
  align-items: center;
  gap: 28px;
  font-size: 27px;
  font-weight: 400;
}

.contact-heading span.contacts-title {
  font-size: 61px;
  font-weight: 700;
}
/* ... */

